mykube/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloapp
  labels:
    app: helloapp
spec:
  ports:
  - protocol: TCP
    port: 8080
  type: NodePort
  selector:
    app: helloapp
